# mountain

./: .gitignore  CMakeLists.txt  README.md
res/quests/: test.json
src/: main.cpp
src/event/: EventHandler.cpp  EventHandler.h
src/input/: InputHandler.cpp  InputHandler.h
src/player/: Player.cpp  Player.h
src/quest/: Quest.cpp  Quest.h
src/window/: RenderWindow.cpp  RenderWindow.h  TerminalRender.cpp  TerminalRender.h
